@@ -11,12 +11,12 @@ public class FullSearchTest {
 
     @Test
     public void extractNumber() {
-        List<Task> task = Arrays.asList(
+        List<Task> task = List.of(
                 new Task("1", "First desc"),
                 new Task("2", "Second desc"),
                 new Task("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        Set<String> expected = new HashSet<>(List.of("1", "2"));
         assertThat(FullSearch.extractNumber(task), is(expected));
     }
 }
